--- a/gb/19/10/8/n11576604.md
+++ b/gb/19/10/8/n11576604.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/q239/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/q239/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/q239/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/q239/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/q239/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/q239/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/q239/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/q239/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/q239/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/q239/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/q239/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/q239/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国留学生施苦肉计 在多伦多上演自我绑架</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/shutterstock_615101675-600x400.jpg" />
 <h6>16岁大陆留学生假装被绑架，向父母索“赎金”。图为配图。（Shutterstock）
 </h6>
 <hr>
-<p>【大纪元2019年10月08日讯】（大纪元记者楚方明<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>编译报导）近日，一对在中国的家长收到了一个微信视频。视频显示，他们16岁的儿子被绑着，嘴被堵，眼睛被蒙上，哀嚎着。“绑匪”还留言要求他们交赎金100万加元。看上去是刚去<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>留学的儿子被绑架了。</p>
-<p>据大<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>约克警方称，9月27日深夜，他们接到该<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6%E6%A1%88.md#1">绑架案</a>报案后，赶往<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E4%B8%87%E9%94%A6.md#1">万锦</a>市Huntington Park路的一户住家。</p>
+<p>【大纪元2019年10月08日讯】（大纪元记者楚方明<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>编译报导）近日，一对在中国的家长收到了一个微信视频。视频显示，他们16岁的儿子被绑着，嘴被堵，眼睛被蒙上，哀嚎着。“绑匪”还留言要求他们交赎金100万加元。看上去是刚去<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8A%A0%E6%8B%BF%E5%A4%A7.md#1">加拿大</a>留学的儿子被绑架了。</p>
+<p>据大<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%9A%E4%BC%A6%E5%A4%9A.md#1">多伦多</a>约克警方称，9月27日深夜，他们接到该<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6%E6%A1%88.md#1">绑架案</a>报案后，赶往<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%87%E9%94%A6.md#1">万锦</a>市Huntington Park路的一户住家。</p>
 <p>警方发言人安迪·帕滕登（Andy Pattenden）对CBC表示：“肯定的，视频令人不安。”他说，警方在接到报案后，立即投入了大量警力进行调查。</p>
 <p>接到报案2小时后，警方在多伦多以北的一家餐馆找到了视频中的男生。该餐馆位于列治文山Valleymede路和7号高速公路附近。男生一直在等着父母转账，最后却不得不被警方带走。</p>
-<p>帕滕登说：“经过进一步调查发现，实际上是这名男生策划了这起<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6%E6%A1%88.md#1">绑架案</a>，目的是引起父母的注意，还有要钱。”</p>
+<p>帕滕登说：“经过进一步调查发现，实际上是这名男生策划了这起<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%91%E6%9E%B6%E6%A1%88.md#1">绑架案</a>，目的是引起父母的注意，还有要钱。”</p>
 <p>这名男生已被逮捕，被控公众妨害罪，将于10月31日出庭。</p>
 <p>警方称，任何知情人士请与警方联系，或匿名拨打灭罪热线1-800-222-TIPS（8477）。</p>
 <h2>陆万祯被绑架案</h2>
 <p>帕滕登表示，这不是约克区警方第一次接到的中国留学生被绑架勒索案。警方非常重视，立即迅速行动。“时间至关重要。”他说。</p>
-<p>3月23日，大陆富二代留学生陆万祯在<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E4%B8%87%E9%94%A6.md#1">万锦</a>一栋公寓停车场被四名歹徒绑架。3天后，他在安省格雷文赫斯特小镇的一条乡村公路上逃脱。该小镇在万锦东北方约200公里处。陆从绑匪车里逃走，找到一户人家，请求帮助。</p>
+<p>3月23日，大陆富二代留学生陆万祯在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%87%E9%94%A6.md#1">万锦</a>一栋公寓停车场被四名歹徒绑架。3天后，他在安省格雷文赫斯特小镇的一条乡村公路上逃脱。该小镇在万锦东北方约200公里处。陆从绑匪车里逃走，找到一户人家，请求帮助。</p>
 <p>今年6月，陆万祯绑架案的一名被告，因绑架勒索罪名成立，被判4年监禁。</p>
 <p>另外三名男子面临多项指控，包括绑架、强行监禁、持械袭击和袭击。还有一名嫌疑人仍被通辑。#</p>
 <p>责任编辑：文芳</p>
@@ -24,42 +24,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/q239/djy/blob/master/gb/19/4/4/n11163115.md#1">陆万祯奢华照引关注 父亲现任道教协会副会长</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/19/4/7/n11169797.md#1">中国留学生在加拿大面临4个最常见安全问题</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/19/5/28/n11285983.md#1">官二代陆万祯多伦多绑架案 其父在中国被查</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/19/7/11/n11378641.md#1">陆万祯被绑架案 第4名劫匪落网</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/19/7/11/n11378793.md#1">移民加拿大的大陆富商勒索案 6项罪名成立</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/27/n12138956.md#1">多伦多波特航空停运延期 7月29日重开</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12138798.md#1">终于降下来了 安省新增287人感染病毒</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12138757.md#1">军方护理院调查报告出炉 福特：令人作呕</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12138722.md#1">多伦多拖车公司涉谋杀案 监管呼声高</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12138299.md#1">进驻养老院抗疫 加拿大军队36人确诊染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/4/4/n11163115.md#1">陆万祯奢华照引关注 父亲现任道教协会副会长</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/4/7/n11169797.md#1">中国留学生在加拿大面临4个最常见安全问题</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/28/n11285983.md#1">官二代陆万祯多伦多绑架案 其父在中国被查</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/11/n11378641.md#1">陆万祯被绑架案 第4名劫匪落网</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/11/n11378793.md#1">移民加拿大的大陆富商勒索案 6项罪名成立</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/22/n13663533.md#1">加拿大各省最新疫情数据 （3月31日）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687201.md#1">谁要打第四针疫苗？安省很快将收到指南</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687105.md#1">37岁亚裔男子失踪 警方在水渠寻获其尸体</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687068.md#1">业界警告安省：或涨保育人员工资或缺人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687061.md#1">安省周四增3,139人染疫 住院患者增加</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/10/n11712979.md#1" target="_blank">严晓：田汉之死? ? ?</a></li><li><a href="https://github.com/q239/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/11/n11315892.md#1" target="_blank">河北一位电器维修师无悔的信念</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/12/n10846318.md#1" target="_blank">共产暴政录：疯狂恐怖的“红八月”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12134669.md#1">山东福建出现H9N2 台疾管署订旅游2级警示</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12135591.md#1">三名中国商人在赞比亚遇害 场面残忍</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12134473.md#1">你中奖了吗？109年3-4月统一发票兑奖资讯</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12135738.md#1">唐绮阳预测下半年运势：选边站不容模糊以对</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12136200.md#1">美中脱钩和对抗全面展开 五大战场激烈交锋</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12136657.md#1">影帝吴朋奉在家倒地猝逝 享年55岁</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/23/n12131774.md#1">黄耀明与艺文界数百人联署 抵制港版国安法</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/24/n12133574.md#1">无惧遭清算 何韵诗：未来不会离开香港</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12134313.md#1">与张上淳是堂兄弟 张洪量：有受影响才从医</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/24/n12133047.md#1">【纪元播报】历史上瘟疫：神农尝百草的秘密</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/21/n12127421.md#1">南朝人误入山洞 遇到汉代的道家隐士河上公</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/20/n12123948.md#1">在瘟疫中救人的神仙</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/24/n12133114.md#1">开元三大士之一 到东土大唐传道的印度高僧</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/9/9/27/n2670522.md#1">古代教育：儒雅的大明朝文人（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/q239/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/q239/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/8/n11576604.htm">中国留学生施苦肉计 在多伦多上演自我绑架</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/8/n11576604.htm">中国留学生施苦肉计 在多伦多上演自我绑架</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/q239/djy/blob/master/gb/19/10/8/n11576604.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/q239/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/q239/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/q239/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/q239/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/q239/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/q239/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/q239/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/q239/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/q239/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/q239/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/q239/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/q239/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/q239/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/q239/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/q239/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/q239/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/q239/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/q239/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/10/8/n11576604.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
